# WhimboxTest

./: .gitignore  README.md  build.bat  dev_mode  pyproject.toml  requirements.txt  run.bat  run.py  run_conda.bat  setup_conda_env.bat  setup_env.bat  whimbox.py
assets/: checkpoints.json  material.json
assets/imgs/: imgs_index.json
assets/paths/: example.json  example1.json  example1_采集测试.json  example2.json  example2_跳跃测试.json  example3.json  example3_星海测试.json  example4.json  example4_捕虫测试.json  example5_钓鱼测试.json  readme.md
config/: config_example.ini  launch.yml  prompt_example.txt
launch/: launch.py
source/: mcp_agent.py  mcp_server.py
source/ability/: ability.py  cvar.py
source/action/: catch_bug.py  catch_insect.py  clean_animal.py  fishing.py  material_track_base.py  pickup.py
source/api/: ocr_rapid.py  pdocr_new.py
source/common/: base_threading.py  cvars.py  handle_lib.py  logger.py  path_lib.py  timer_module.py
source/config/: config.py  default_config.py
source/dev_tool/: assest_tools.py  asset_index_generator.py  get_all_checkpoints.py  hsv_tool.py  map_assets_gen.py  snapshot.py
source/ingame_ui/: __init__.py  ingame_ui.py  main_ui.py
source/interaction/: capture.py  interaction_core.py  interaction_normal.py  interaction_template.py  winsdk_capture.py
source/launch/: launch.py
source/map/: convert.py  map.py  position.py  track.py
source/task/: task_template.py  utils.py
source/ui/: material_icon_assets.py  page.py  page_assets.py  ui.py  ui_assets.py
whimbox/: main.py  mcp_agent.py  mcp_server.py
whimbox/map/: map.py  (+3 more)
(+122 files in other folders)
